# ndkcamerasample

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  message-internal.h  native-lib.cpp  ndkcamera.cpp  ndkcamera.h
app/src/main/java/com/example/opencvtest2/: MainActivity.java  NativeLibCalls.java  OpenActivity.java
app/src/main/res/layout/: activity_main.xml  activity_open.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/java/: AndroidManifest.xml
